Fixed issue with page overflowing outside of screen

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  max-height: 100%;
 }
 .app .main-content .navigation {
   position: absolute;
@@ -102,6 +103,7 @@
   color: #ffffff;
   display: flex;
   flex-direction: column;
+  max-height: 100%;
 }
 .app .main-content .page-wrap .config-options {
   padding: 1rem 1rem 0;
